Fixed margins and spacing

--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
-    display:flex;
+    display: flex;
     flex-direction: column;
     margin:0px;
-}
+    min-height: 100vh;
+    justify-content: space-between;
 
+}
 
 .header_logo, .copyright, .website_intro, .cr_sub, ul {    
     color: #f3f2f7;
@@ -19,6 +21,8 @@ body {
     justify-content: space-between;
     background-color: #1b6c86;
     padding: 0px 10%;
+    flex-grow:0;
+
 }
 
 ul {
@@ -29,15 +33,21 @@ ul {
 }
 
 .content {
+    display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    flex:auto;
 }
 
 .website_intro{
     display:flex;
     background-color: #1b6c86;
     padding: 40px 10%;
-    justify-content: space-between;
+    justify-content: center;
+    gap:120px;
     align-items: center;
+    justify-self: stretch;
+    flex-grow:1;
 }
 
 .awesome{
@@ -47,7 +57,6 @@ ul {
 
 .subawesome {
     font-size: 18px;
-    color:#f3f2f7
 }
 
 .signup {
@@ -70,7 +79,7 @@ button {
     border-radius: 10px;
     border-style: none;
     border-width: 10px;
-    color: #1b6c86;
+    color: #f3f3f7;
     padding: 15px 32px;
     text-decoration: none;
     font-size: 16px;
@@ -87,6 +96,8 @@ button {
     background-color: #f3f2f7;
     margin:0;
     padding: 32px 0px;
+    flex-grow:1;
+
 }
 
 .info_title {
@@ -97,13 +108,13 @@ button {
 .info_container {
     display:flex;
     flex-direction: row;
-    align-items: flex-start;
-    justify-items: space-evenly;
-    gap:32px;
     flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+    gap:32px;
     color:#292929;
     padding: 0px 32px;
-
+    width: 100%;
 
 }
 
@@ -112,6 +123,7 @@ button {
     flex-direction: column;
     align-items: center;
     max-width: 200px;
+    gap:10px
     }
 
 
@@ -132,19 +144,22 @@ button {
     color: #1F2937;
     display:flex;
     flex-direction: column;
+    align-items: center;
+    flex-grow:1;
+
 }
 
 .quote {
     font-size: 36px;
     font-weight: 300;
     font-style: italic;
+    max-width: 800px;
 }
 
 .attribution {
     font-size: 24px;
     font-weight: 700;
-    align-content: right;
-    margin-left:auto;
+    margin-left:675px;
 }
 
 .call_container{
@@ -194,6 +209,8 @@ button {
     justify-content: space-between;
     background-color: #325D79;
     padding: 0px 10%;
+    flex-grow:0;
+
 }
 
 .cr_sub{
